# EPaper-Display-WebApp

./: CMakeLists.txt  README.md  README_zh.md
ConverterTo6color/ConverterTo6color/: converterTo6color_all.cmd
image_to_epaper/: image_to_epaper.py  image_to_epaper_v2.py  image_to_epaper_v2_zh.py  image_to_epaper_v3_zh.py
include/: EDP_4in0_epaper.h  EDP_7in3_epaper.h  EPD_4in0_epaper.h  EPD_7in3_epaper.h  epaper.h  image_processing.h  server.h  utils.h
lib/mongoose/: mongoose.h
src/: EDP_4in0_epaper.cpp  EDP_7in3_epaper.cpp  EPD_4in0_epaper.cpp  EPD_7in3_epaper.cpp  epaper.cpp  image_processing.cpp  main.cpp  server.cpp
waveshare_color_converter/ConverterTocolor/: .editorconfig  .editorconfig.inferred  converterTocolor.sln
waveshare_color_converter/ConverterTocolor/Release/: converterTo4color_all.cmd
waveshare_color_converter/ConverterTocolor/converterTo4color/: .editorconfig  .editorconfig.inferred  converterTo4color.cpp  converterTo4color.vcxproj  converterTo4color.vcxproj.filters
waveshare_color_converter/ConverterTocolor/converterTo4color/Debug/: converterTo4color.exe.recipe  converterTo4color.ilk  vc142.idb
waveshare_color_converter/ConverterTocolor/converterTo4color/Debug/converte.9e188701.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
waveshare_color_converter/ConverterTocolor/converterTo4color/Release/: converterTo4color.exe.recipe
waveshare_color_converter/ConverterTocolor/converterTo4color/x64/Debug/: converterTo4color.exe.recipe  converterTo4color.ilk  vc142.idb
waveshare_color_converter/ConverterTocolor/converterTo4color/x64/Debug/converte.9e188701.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
waveshare_color_converter/ConverterTocolor/converterTo6color/: .editorconfig  converterTo6color.cpp  converterTo6color.vcxproj  converterTo6color.vcxproj.filters
waveshare_color_converter/ConverterTocolor/converterTo6color/Debug/converte.41f4efe0.tlog/: converterTo6color.lastbuildstate
waveshare_color_converter/ConverterTocolor/converterTo6color/x64/Debug/: converterTo6color.exe.recipe  converterTo6color.ilk  vc142.idb
waveshare_color_converter/ConverterTocolor/converterTo6color/x64/Debug/converte.295B22EF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  converterTo6color.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
waveshare_color_converter/ConverterTocolor/converterTo7color/: converterTo7color.cpp  converterTo7color.vcxproj  converterTo7color.vcxproj.filters
waveshare_color_converter/ConverterTocolor/converterTo7color/Debug/: converterTo7color.exe.recipe  converterTo7color.ilk  vc142.idb
waveshare_color_converter/ConverterTocolor/converterTo7color/Debug/converte.41f4efe0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  converterTo7color.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
waveshare_color_converter/ConverterTocolor/converterTo7color/Release/: converterTo7color.exe.recipe
waveshare_color_converter/ConverterTocolor/converterTo7color/x64/Debug/: converterTo7color.exe.recipe  converterTo7color.ilk  vc142.idb
waveshare_color_converter/ConverterTocolor/converterTo7color/x64/Debug/converte.41f4efe0.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
waveshare_color_converter/ConverterTocolor/converterTo7color/x64/Release/: converterTo7color.exe.recipe  converterTo7color.iobj  converterTo7color.ipdb
waveshare_color_converter/ConverterTocolor/converterTo7color/x64/Release/converte.41f4efe0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  converterTo7color.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
